RESOLVED FIXED104732
[WK2 NetworkProcess] Cannot load HTTPS sites
https://bugs.webkit.org/show_bug.cgi?id=104732
Summary [WK2 NetworkProcess] Cannot load HTTPS sites
Alexey Proskuryakov
Reported 2012-12-11 15:46:31 PST
E.g. bugs.webkit.org just stays blank, and progress doesn't move with NetworkProcess enabled. <rdar://problem/12857870>
Attachments
proposed fix (1.32 KB, patch)
2012-12-11 15:49 PST, Alexey Proskuryakov
no flags
with fewer leaks (1.42 KB, patch)
2012-12-11 15:54 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2012-12-11 15:49:44 PST
Created attachment 178900 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-12-11 15:54:14 PST
Created attachment 178902 [details] with fewer leaks
WebKit Review Bot
Comment 3 2012-12-11 17:01:22 PST
Comment on attachment 178902 [details] with fewer leaks Clearing flags on attachment: 178902 Committed r137389: <http://trac.webkit.org/changeset/137389>
WebKit Review Bot
Comment 4 2012-12-11 17:01:26 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5 2012-12-11 17:16:20 PST
Why doesn’t take work? I keep reading over the code and can’t figure it out. Maybe the value is a 0?
Alexey Proskuryakov
Comment 6 2012-12-11 18:22:20 PST
Yes, the value was 0, which was erroneously treated as if the key was missing.
Note You need to log in before you can comment on or make changes to this bug.