<rdar://problem/12857870> [WK2 NetworkProcess] Cannot load HTTPS sites https://bugs.webkit.org/show_bug.cgi?id=104732

Reviewed by Anders Carlsson.

* Shared/BlockingResponseMap.h: (BlockingBoolResponseMap::waitForResponse):
Fixed to make sense.


Canonical link: https://commits.webkit.org/122944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137389 268f45cc-cd09-0410-ab3c-d52691b4dbfc